# Tank-Game

CPP VERSION/: CMakeLists.txt  editor.py
CPP VERSION/src/: Dead_loop.cpp  Importation.cpp  Importation.hpp  Level.cpp  Level.hpp  Level_editor.cpp  Level_editor.hpp  Level_loop.cpp  Level_selection.cpp  Loops.hpp  Options.cpp  Pause_loop.cpp  main.cpp  obstacles.cpp  obstacles.hpp
CPP VERSION/src/Tank/: AI_Def.cpp  AI_Def.hpp  AI_Player.hpp  AI_advanced.cpp  AI_advanced.hpp  Bullet.cpp  Bullet.hpp  PathAI.cpp  Player.cpp  RushAI.cpp  Spawner.cpp  StillAI.cpp  Tank.cpp  Tank.hpp
CPP VERSION/src/Utilities/: Cursor.cpp  Ressource_manager.cpp  Sound.cpp  Utils.hpp  Utils_classes.hpp  background.cpp  button.cpp  message.cpp  path.cpp  slidebutton.cpp
CPP VERSION/static/levels/: level0.txt  level10.txt  level11.txt  level12.txt  level13.txt  level15.txt  level16.txt  level17.txt  level18.txt  level19.txt  level20.txt  level22.txt  level23.txt  level24.txt  level27.txt  level28.txt  level29.txt  level30.txt  level31.txt  level5.txt  level6.txt  level7.txt  level8.txt  level9.txt  menu.txt
PYTHON VERSION/: Tank Game.py  tank_game_setup.py  tank_game_setup_mac.py  unlocked.txt
PYTHON VERSION/levels/: level10.txt  menu.txt  training.txt
PYTHON VERSION/src/: AI_Advanced.py  AI_Player.py  AI_Standard.py  Bullet_Cursor.py  Importation.py  Init_AI.py  Level_Editor.py  Level_Loop.py  Level_Selection.py  Menu.py  Options.py  Tank.py  Training.py  Utils.py  Walls.py  paths.py
